running tests with Kratos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
         cd tests
         export PYTHONPATH=${PYTHONPATH}:/software/Kratos/bin/Release
         export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/software/Kratos/bin/Release/libs
-        # python3 run_all_tests.py
+        python3 run_all_tests.py
 
 
   testing-in-salome:
