run different test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,9 @@ jobs:
 
     - name: Running tests with Kratos
       run: |
-        python3 /software/Kratos/kratos/python_scripts/run_tests.py -l small -c python3
-        # cd tests
+        # python3 /software/Kratos/kratos/python_scripts/run_tests.py -l small -c python3
+        cd tests
+        python3 test_utils.py
         # python3 run_all_tests.py
 
 
