--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,10 +55,13 @@ jobs:
 
     - name: Running tests with Kratos 2
       run: |
-        # python3 /software/Kratos/kratos/python_scripts/run_tests.py -l small -c python3
         cd tests
         python3 test_import_kratos.py
-        # python3 run_all_tests.py
+
+    - name: Running tests with Kratos 3
+      run: |
+        cd tests
+        python3 test_model_part.py
 
 
   testing-in-salome:
