--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,20 +48,8 @@ jobs:
 
     - name: Running tests with Kratos
       run: |
-        # python3 /software/Kratos/kratos/python_scripts/run_tests.py -l small -c python3
         cd tests
-        python3 test_utils.py
-        # python3 run_all_tests.py
-
-    - name: Running tests with Kratos 2
-      run: |
-        cd tests
-        python3 test_import_kratos.py
-
-    - name: Running tests with Kratos 3
-      run: |
-        cd tests
-        python3 test_model_part.py -v
+        python3 run_all_tests.py
 
 
   testing-in-salome:
