--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 *.log*
 
 # excluding the example files
-standalone_tui_usage/**/*.mdpa
-standalone_tui_usage/**/*.hdf
-standalone_tui_usage/**/*.vtk
+tui_examples/**/*.mdpa
+tui_examples/**/*.hdf
+tui_examples/**/*.vtk
 
 
 ##### FROM TEMPLATE: #####
