--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.6 # same as used in Salome 9
+        commit_message: github.event.head_commit.message
 
     - name: Running tests
       run: |
+        echo $COMMIT_MESSAGE
         cd tests
         python run_all_tests.py
 
