--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,8 @@ jobs:
 
     - name: Running tests
       run: |
-        echo $COMMIT_MESSAGE
+        echo "COMMIT_MESSAGE:" $COMMIT_MESSAGE
+        echo "github.event.head_commit.message:" $github.event.head_commit.message
         cd tests
         python run_all_tests.py
 
