--- a/tui_examples/cantilever/ProjectParameters.json
+++ b/tui_examples/cantilever/ProjectParameters.json
@@ -7,7 +7,7 @@
         "end_time"      : 1.0
     },
     "solver_settings"  : {
-        "solver_type"                     : "Static",
+        "solver_type"                     : "static",
         "model_part_name"                 : "Structure",
         "domain_size"                     : 3,
         "echo_level"                      : 0,
