--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
 
     - name: Running tests in salome version ${{ matrix.salome-version }}
       # "--shutdown-servers=1" is not used bcs container is shut down right after
-      env:
-        LANG: C.UTF-8
+      # env:
+      #   LANG: C.UTF-8
       run: |
         cd tests
         python3 ../execute_in_salome.py /root/salome_dir/salome run_all_tests.py
