--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,8 @@ jobs:
       run: pip install pyqt5
 
     - name: Running tests
+      env:
+        PYQT_AVAILABLE: 1
       run: |
         cd tests
         python run_all_tests.py
@@ -47,8 +49,6 @@ jobs:
   testing-with-kratos:
     strategy:
       fail-fast: false
-    env:
-      KRATOS_AVAILABLE: 1
 
     runs-on: ubuntu-18.04
 
@@ -59,6 +59,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Running tests with Kratos
+      env:
+        KRATOS_AVAILABLE: 1
       run: |
         cd tests
         python3 run_all_tests.py
@@ -81,6 +83,7 @@ jobs:
     - name: Running tests in salome version ${{ matrix.salome-version }}
       # "--shutdown-servers=1" is not used bcs container is shut down right after
       env:
+        PYQT_AVAILABLE: 1
         LANG: C.UTF-8 # see https://stackoverflow.com/a/51302441
       run: |
         cd tests
