--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Running tests
       env:
         PYQT_AVAILABLE: 1
+        QT_QPA_PLATFORM: offscreen
       run: |
         cd tests
         python run_all_tests.py
@@ -84,6 +85,7 @@ jobs:
       # "--shutdown-servers=1" is not used bcs container is shut down right after
       env:
         PYQT_AVAILABLE: 1
+        QT_QPA_PLATFORM: offscreen
         LANG: C.UTF-8 # see https://stackoverflow.com/a/51302441
       run: |
         cd tests
