--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
       # "--shutdown-servers=1" is not used bcs container is shut down right after
       env:
         PYQT_AVAILABLE: 1
-        QT_QPA_PLATFORM: offscreen
+        QT_QPA_PLATFORM: minimal
         LANG: C.UTF-8 # see https://stackoverflow.com/a/51302441
       run: |
         cd tests
