install libfontconfig in DockerImage

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -70,6 +70,9 @@ jobs:
     - name: Running tests in salome version ${{ matrix.salome-version }}
       # "--shutdown-servers=1" is not used bcs container is shut down right after
       env:
+        PYQT_AVAILABLE: 1
+        QT_QPA_PLATFORM: offscreen
+        QT_DEBUG_PLUGINS: 1
         LANG: C.UTF-8 # see https://stackoverflow.com/a/51302441
       run: |
         cd tests
