--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -17,6 +17,8 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libglu1-mesa libxmu6 \
     # install libpng16
     libpng16-16 && \
+    # install libfontconfig for qt
+    libfontconfig && \
     rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
