running tests also without PyQt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }} # Salome 9 uses Python 3.6
 
+    - name: Running tests (without PyQt)
+      env:
+        PYQT_AVAILABLE: 0
+      run: |
+        cd tests
+        python run_all_tests.py
+
     - name: Install PyQt5
       run: pip install pyqt5
 
-    - name: Running tests
+    - name: Running tests (with PyQt)
       env:
         PYQT_AVAILABLE: 1
         QT_QPA_PLATFORM: offscreen
