--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -21,7 +21,7 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libpng16-16 \
     # install libfontconfig for qt
     libfontconfig && \
-    libicu && \
+    libicu55 && \
     rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
