--- a/.github/workflows/check_salome_execution.yml
+++ b/.github/workflows/check_salome_execution.yml
@@ -50,8 +50,6 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: assert run in salome
-      # given as string bcs some keywords are also recognized by yaml
-      # "--shutdown-servers=1" is not used bcs container is shut down right after
       run: |
         cd .github
-        "/root/salome_dir/salome -t assert_run_in_salome.py args:1"
+        python3 ../execute_in_salome.py /root/salome_dir/salome assert_run_in_salome.py 1
