--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -102,6 +102,6 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: assert run in salome
-      # given as string bcs some keywords are also recognized by yaml
-      # "--shutdown-servers=1" is not used bcs container is shut down right after
-      run: "/root/salome_dir/salome -t .github/assert_run_in_salome.py args:1"
+      run: |
+        cd .github
+        python3 ../execute_in_salome.py /root/salome_dir/salome assert_run_in_salome.py 1
