[CI] add Salome version 9.6 (#149)
* initial

* adding libicu to Docker

* using libicu55

* try v60

* fix docker syntax error

* missing cd

* fix path

* use differet command

* update

--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -20,7 +20,8 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     # install libpng16
     libpng16-16 \
     # install libfontconfig for qt
-    libfontconfig && \
+    libfontconfig \
+    libicu60 && \
     rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
