--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [9-3, 9-4, 9-5, 9-6]
+        salome-version: [9-3, 9-4, 9-5, 9-6, 9-7]
 
     runs-on: ubuntu-18.04
 
@@ -34,6 +34,8 @@ jobs:
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.5.0"
         elif [ ${{ matrix.salome-version }} == 9-6 ]; then
           SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.6.0"
+        elif [ ${{ matrix.salome-version }} == 9-7 ]; then
+          SALOME_DOWNLOAD_PATH="https://www.salome-platform.org/downloads/current-version/DownloadDistr?platform=SP.UB18.04&version=9.7.0"
         else
           echo 'No "SALOME_DOWNLOAD_PATH" configured for version ${{ matrix.salome-version }}'
           exit 1
@@ -63,7 +65,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [9-3, 9-4, 9-5, 9-6]
+        salome-version: [9-3, 9-4, 9-5, 9-6, 9-7]
 
     runs-on: ubuntu-18.04
 
@@ -91,7 +93,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [9-3, 9-4, 9-5, 9-6]
+        salome-version: [9-3, 9-4, 9-5, 9-6, 9-7]
 
     runs-on: ubuntu-18.04
 
