--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        salome-version: [9-3, 9-4, 9-5, 9-6]
+        salome-version: [9-3, 9-4, 9-5, 9-6, 9-7]
 
     runs-on: ubuntu-latest
 
