--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -22,7 +22,7 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     # install libfontconfig for qt
     libfontconfig \
     libicu60 && \
-    gcc && \
+    libgomp1 && \
     rm -rf /var/lib/apt/lists/* && \
     # getting salome
     wget -nv ${salome_download_path} -O salome_dir.tar.gz && \
