--- a/.github/docker_ubuntu_bionic/DockerFile
+++ b/.github/docker_ubuntu_bionic/DockerFile
@@ -21,7 +21,7 @@ RUN apt-get update -y && apt-get -y install --no-install-recommends \
     libpng16-16 \
     # install libfontconfig for qt
     libfontconfig \
-    libicu60 && \
+    libicu60 \
     libgomp1 && \
     rm -rf /var/lib/apt/lists/* && \
     # getting salome
