--- a/tui_examples/mok_fsi/ProjectParametersCFD.json
+++ b/tui_examples/mok_fsi/ProjectParametersCFD.json
@@ -171,10 +171,10 @@
                 "file_format"                        : "binary",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
-                "folder_name"                        : "vtk_output_mok_fsi_cfd",
+                "output_path"                        : "vtk_output_mok_fsi_cfd",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE","MESH_DISPLACEMENT","MESH_VELOCITY"]
             }
         }]
-     }
+    }
 }
