exclude some py versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10"]
+        exclude:
+          # py3.5 & 3.6 are noiw available on MacOS
+          - os: macOS-latest
+            python-version: "3.5"
+          - os: macOS-latest
+            python-version: "3.6"
 
     steps:
 
