--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10"]
+        exclude:
+          # py3.5 & 3.6 are noiw available on MacOS
+          - os: macOS-latest
+            python-version: "3.5"
+          - os: macOS-latest
+            python-version: "3.6"
 
     steps:
+
     - uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version }}
